# chip8-rust

./: Cargo.toml  README.md
chip8_emu/: Cargo.toml
chip8_emu/src/: lib.rs
driver/: Cargo.toml
driver/src/: main.rs
js-port/: chip8.html  chip8.js
src/: lib.rs
