[package]
name = "chip8_emu_driver"
version = "0.1.0"
authors = ["Kevin Brothaler <contact@digipom.com>"]
description = "Example CHIP-8 emulator using SDL 2"
keywords = ["emu", "example", "chip8"]
license = "Apache-2.0"
homepage = "https://github.com/learnopengles/chip8-rust"
repository = "https://github.com/learnopengles/chip8-rust"

[dependencies]
rand = "0.3.14"
sdl2 = "0.25.0"

[dependencies.chip8_emu]
path = "../chip8_emu/"